--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="delete_message">"Post deleted successfully"</string>
     <string name="add_post_to_favourite">Add post to favourite</string>
     <string name="delete_single_post_button">delete single post button</string>
+    <string name="ooops_can_t_load_data_due_to_connection_issue_n_please_click_the_retry_button_to_reload">Ooops!! Can\'t load data due to connection issue\n Please click the retry button to reload</string>
 </resources>
